# hermes-a2a

./: .gitignore  PLAN.md  README.md  SNAPSHOT-MANIFEST.json  pyproject.toml
docs/: developer.md  hermes-stuff-submodule.md  operator.md  plugin-wrapper-evidence.md  plugin.md
milestones/final/: A2A-V1-LOCAL-IMPLEMENTATION-CLOSEOUT.md  artifact-manifest.json  submodule-validation-receipt.json
milestones/m16/: CONFORMANCE-MATRIX-FINAL.json  CONFORMANCE-SYNTHESIS.md  validation-receipt.json
milestones/m17a/: M17A-SYNTHESIS.md  validation-receipt.json
milestones/m18/: IAP-PORTING-PACKET.md  M18-SYNTHESIS.md  RELEASE-READINESS.md  artifact-manifest.json  final-hygiene.json  validation-receipt.json
milestones/m7/: LOCAL-SAFETY-SUBSTRATE.md  M7-SPEC-BASELINE.md  conformance-matrix.json  gap-ledger.json  m0-m6-evidence-manifest.json  operation-binding-table.json  validation-receipt.json
plugin/: __init__.py  plugin.yaml
scripts/: probe_profile_launcher.py  run_m17a_pilot.py  run_m17b_triad_pilot.py  run_m17c_live_executor_pilot.py  run_m17d_service_rollout.py  run_m17e_lan_pilot.py  validate_local_conformance.py
spec/upstream/: SOURCE.json  a2a-sdk-pypi-1.0.0.json  source-bundle-manifest.json
src/hermes_a2a/: __init__.py  agent_card.py  app.py  config.py  conformance.py  (+9 more)
tests/: test_agent_card_and_bindings.py  test_conformance_gates.py  test_instance_config.py  test_live_executor_contract.py  test_m17e_lan_pilot.py  test_m7_artifacts.py  test_projection_receipts.py  test_push_policy.py  test_sidecar_runner.py  test_streaming_push_grpc.py  test_triad_sidecars.py
(+39 files in other folders)
