[project]
name = "hermes-a2a"
version = "0.1.0"
description = "Local Hermes safety wrapper around pinned upstream A2A v1.0.0 SDK"
requires-python = ">=3.11"
dependencies = [
  "a2a-sdk[http-server,grpc]==1.0.0",
  "httpx>=0.28.1",
  "PyYAML>=6.0.2",
  "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_a2a", "src/hermes_a2a_plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.entry-points."hermes_agent.plugins"]
"hermes-a2a" = "hermes_a2a_plugin"
